# kanban-prompt-companion

./: .env.example  .gitignore  LICENSE  NON_GOALS.md  PHASE_REPORT.md  README.md  RUNBOOK.md  pyproject.toml
app/: __init__.py  cli.py  config.py  contracts.py  main.py
app/ingest/: __init__.py  dedupe.py  lifecycle.py  markdown.py  paths.py  runtime.py  stable_read.py  watcher.py
app/kanban/: __init__.py  client.py  manifest.py
app/pipeline/: __init__.py  cleanup.py  directives.py  render.py
app/storage/: __init__.py  db.py  repository.py  schema.py
docs/: KANBAN_PROMPT_COMPANION_DESIGN.md  KANBAN_PROMPT_COMPANION_PROMPT_PACK.md  PROMPTFORGE_SALVAGE_EXTRACTION_REPORT.md
docs/diagrams/: 01-system-architecture.md  02-data-flow.md  03-component-structure.md  04-database-schema.md  05-api-flows.md  06-kanban-integration.md  README.md
docs/prompts/kanban_prompt_companion_prompt_pack/: 00_MASTER_PHASE_IMPLEMENTATION_COORDINATOR.md  01_PROJECT_SKELETON_AND_BOUNDARIES.md  (+8 more)
scripts/: build_executable.sh
templates/: prompt_package.md.j2
tests/: test_health.py  test_ingest_paths.py  test_kanban_client.py  test_markdown_and_directives.py  test_phase4_api.py  test_phase7_api.py  test_phase7_hardening.py  test_render_and_manifest.py  test_running_workflow.py  test_stable_read.py  test_storage_repository.py  test_versioning.py
tests/fixtures/: parser_pipeline_voice_note.md
web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
web/src/: App.phase7.test.tsx  App.test.tsx  App.tsx  index.css  main.tsx
(+12 files in other folders)
